@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "POLYGLOT 6"
-.TH POLYGLOT 6 "2009-08-07" "" ""
+.TH POLYGLOT 6 "2009-08-11" "" ""
 .SH "NAME"
 PolyGlot \-  Winboard protocol to UCI protocol adapter
          \-  book engine for Polyglot books 
@@ -554,13 +554,18 @@ When RepeatPV is false PolyGlot does not repeat the last pv string.
 Due to the way kibitzing is implemented, KibitzMove is disabled in that case. 
 .IP "\fBWbWorkArounds\fR (default: true)" 4
 .IX Item "WbWorkArounds (default: true)"
-The intention of this option is to provide work arounds for
-xboard/winboard bugs should they arise.  Currently it decapitalizes
+The intention of these options is to provide work arounds for
+xboard/winboard bugs should they arise.  This one decapitalizes
 the word Draw in options that contain this word. Some versions of
 xboard/winboard contain a bug which causes such options to be
 interpreted as draw claims by the engine.
 .Sp
 Engines that send options with \*(L"Draw\*(R" in their name are Rybka and \s-1HIARCS\s0. 
+.IP "\fBWbWorkArounds2\fR (default: false)" 4
+.IX Item "WbWorkArounds2 (default: false)"
+Old version of Winboard clear the engine output window at depth 1. With this
+work around \s-1PG\s0 will send info lines at depth >=2. This may or may not improve
+the display. 
 .Sh "[Engine] section"
 .IX Subsection "[Engine] section"
 This section contains engine \s-1UCI\s0 options.  PolyGlot does not
