@@ -520,13 +520,19 @@ Due to the way kibitzing is implemented, KibitzMove is disabled in that case.
 
 =item B<WbWorkArounds> (default: true)
 
-The intention of this option is to provide work arounds for
-xboard/winboard bugs should they arise.  Currently it decapitalizes
+The intention of these options is to provide work arounds for
+xboard/winboard bugs should they arise.  This one decapitalizes
 the word Draw in options that contain this word. Some versions of
 xboard/winboard contain a bug which causes such options to be
 interpreted as draw claims by the engine.
 
 Engines that send options with "Draw" in their name are Rybka and HIARCS. 
+
+=item B<WbWorkArounds2> (default: false)
+
+Old version of Winboard clear the engine output window at depth 1. With this
+work around PG will send info lines at depth >=2. This may or may not improve
+the display. 
 
 =back
 
