@@ -1,3 +1,10 @@
+=========1.4.36b================
+- Bugfix: option = 0/1 was translated incorrectly.
+- Default node count is 1.
+- EOF received from the engine should now be logged correctly (i.e. after the buffer is empty).
+- Bugfix: Nasty buffer overflow in the macro CONSTRUCT_ARG_STRING.
+- Bugfix: pipex_writeln (win32) was logging at the wrong spot. 
+- Log board when an illegal move is received. 
 =========1.4.35b================
 - New WbWorkAround for silly bug in WB. Depth <=1 clears the engine output window. Why should an engine not be allowed to send info at depth one?
 =========1.4.34b================
